--- a/HTML/Donatii.html
+++ b/HTML/Donatii.html
@@ -11,7 +11,7 @@
       <ul class="nav_bar">
         <li><img src="../imagini/hochland.jpg" width="50" alt="logo" /></li>
         <li><a href="Acasa.html" class="pag2"> Pagina principala</a></li>
-        <li><a href="placinte.html" class="pag3"> Alte placinte</a></li>
+        <li><a href="Placinte.html" class="pag3"> Alte placinte</a></li>
         <li><a href="Donatii.html" class="pag2"> Donatii</a></li>
       </ul>
     </nav>
