--- a/HTML/Acasa.html
+++ b/HTML/Acasa.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <ul class="nav_bar">
-        <li><img src="../imagini/hochland.jpg" width="50" alt="logo" /></li>
+        <li><img src="../Imagini/hochland.jpg" width="50" alt="logo" /></li>
         <li><a href="Acasa.html" class="pag3"> Pagina principala</a></li>
         <li><a href="Placinte.html" class="pag3"> Alte placinte</a></li>
         <li><a href="Donatii.html" class="pag2"> Donatii</a></li>
@@ -36,19 +36,19 @@
             <div class="telemele">
               <img
                 class="telemea"
-                src="../imagini/telemea.jpg"
+                src="../Imagini/telemea.jpg"
                 alt="telemea"
                 width="250"
               />
               <img
                 class="telemea2"
-                src="../imagini/telemea_2.jpg"
+                src="../Imagini/telemea_2.jpg"
                 alt="telemea2"
                 width="250"
               />
               <img
                 class="telemea3"
-                src="../imagini/telemea_3.jpg"
+                src="../Imagini/telemea_3.jpg"
                 alt="telemea3"
                 width="250"
               />
@@ -59,7 +59,7 @@
             <strong>foile de placinta</strong>
 
             <img
-              src="../imagini/foi_placinta.png"
+              src="../Imagini/foi_placinta.png"
               alt="foi de placinta"
               width="300"
             />
