--- a/HTML/Multumim.html
+++ b/HTML/Multumim.html
@@ -17,7 +17,7 @@
     </nav>
     <div class="pagini">
       <div class="pagina1">
-        <img class="imagine" src="../imagini/partener1.png" alt="partener" />
+        <img class="imagine" src="../Imagini/partener1.png" alt="partener" />
         <div class="text">
           &nbsp;&nbsp; Va multumim pentru ajutor! Pe aceasta pagina veti gasi
           imagini cu magazinele partenerilor nostri si cate un link catre pagina
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="pagina2">
-        <img class="imagine" src="../imagini/partener2.png" alt="partener" />
+        <img class="imagine" src="../Imagini/partener2.png" alt="partener" />
         <div class="text1">
           &nbsp; &nbsp; "Am vrut să readucem în viața noastră și a altora
           principiile de demult: lucrurile bune ale vieții nu pot fi cumpărate
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="pagina3">
-        <img class="imagine" src="../imagini/partener3.png" alt="partener" />
+        <img class="imagine" src="../Imagini/partener3.png" alt="partener" />
         <div class="text1">
           &nbsp; &nbsp; "Bacania Boiereasca este o afacere de familie, aparuta
           dintr-un concept simplu. Viziunea ei pleaca din dorinta de a da
