--- a/HTML/Donatii.html
+++ b/HTML/Donatii.html
@@ -50,5 +50,11 @@
       <input class="l8" type="text" /><br />
       <input class="multumim" type="submit" />
     </form>
+    <div>
+      <figure>
+        <img class="burduff" src="../Imagini/branza_burduf.jpg" alt="burduf">
+      </figure>
+    </div>
+    <div><img class="imgSeif" src="../Imagini/seif.png" alt="seif" ></div>
   </body>
 </html>
