--- a/HTML/Donatii.html
+++ b/HTML/Donatii.html
@@ -52,7 +52,7 @@
     </form>
     <div>
       <figure>
-        <img class="burduff" src="../Imagini/branza_burduf.jpg" alt="burduf">
+        <img class="burduf" src="../Imagini/branza_burduf.jpg" alt="burduf">
       </figure>
     </div>
     <div><img class="imgSeif" src="../Imagini/seif.png" alt="seif" ></div>
